infra/k8s/auth-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-mongo-db
spec:
  selector:
    matchLabels:
      app: auth-service-mongo-db
  template:
    metadata:
      labels:
        app: auth-service-mongo-db
    spec:
      containers:
        - name: auth-service-mongo-db
          image: mongo
          resources:
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-mongo-db-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auth-service-mongo-db
  ports:
    - name: auth-service-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
