infra/k8s/auth-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: himeshramjee/auth-service
          resources:
            requests:
              memory: "100Mi"
              cpu: "1m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 7000
      targetPort: 7000
