infra/k8s/client-webapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-webapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-webapp
  template:
    metadata:
      labels:
        app: client-webapp
    spec:
      containers:
        - name: client-webapp
          image: himeshramjee/teekeet-client-web-app:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "512Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-webapp-nodeport-srv
spec:
  type: NodePort
  selector:
    app: client-webapp
  ports:
    - name: client-webapp
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-webapp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: client-webapp
  ports:
    - name: client-webapp
      protocol: TCP
      port: 3000
      targetPort: 3000
