infra/k8s/nats-streaming-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-streaming-server-depl
spec:
  selector:
    matchLabels:
      app: nats-streaming-server
  template:
    metadata:
      labels:
        app: nats-streaming-server
    spec:
      containers:
        - name: nats-streaming-server
          image: nats-streaming
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "10s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "teekeet-streaming-cluster",
            ]
          resources:
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 4222
            - containerPort: 8222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-streaming-server-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: nats-streaming-server
  ports:
    - name: nats-streaming-server
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-streaming-monitor
      protocol: TCP
      port: 8222
      targetPort: 8222
