infra/k8s/order-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-depl
spec:
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: himeshramjee/order-service
          resources:
            requests:
              memory: "100Mi"
              cpu: "1m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 7002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 7002
      targetPort: 7002
