infra/k8s/order-service-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-mongo-db-depl
spec:
  selector:
    matchLabels:
      app: order-service-mongo-db
  template:
    metadata:
      labels:
        app: order-service-mongo-db
    spec:
      containers:
        - name: order-service-mongo-db
          image: mongo
          resources:
            requests:
              memory: "100Mi"
              cpu: "1m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-mongo-db-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: order-service-mongo-db
  ports:
    - name: order-service-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
