infra/k8s/teekeet-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teekeet-service
spec:
  selector:
    matchLabels:
      app: teekeet-service
  template:
    metadata:
      labels:
        app: teekeet-service
    spec:
      containers:
        - name: teekeet-service
          image: himeshramjee/teekeet-service
          resources:
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: teekeet-service-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: teekeet-service
  ports:
    - name: teekeet-service
      protocol: TCP
      port: 7001
      targetPort: 7001
