infra/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: teekeet.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service-clusterip-srv
              servicePort: 7000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: teekeet-service-clusterip-srv
              servicePort: 7001
          - path: /api/orders/?(.*)
            backend:
                serviceName: order-service-clusterip-srv
                servicePort: 7001
          - path: /?(.*)
            backend:
              serviceName: client-webapp-clusterip-srv
              servicePort: 3000
